# vectro-plus

./: .gitattributes  .gitignore  BUILD_COMPLETE.md  CHANGELOG.md  Cargo.toml  DEMO.md  EXAMPLES.md  IMPROVEMENTS.md  INDEX.md  QSTREAM.md  QUICKSTART.md  QUICKSTART_VIDEO.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_v1.0.0.md  RUST_CONVERSION_COMPLETE.md  RUST_MIGRATION.md  TEST_COVERAGE_REPORT.md  VIDEO_DEMO.md  VISUAL_GUIDE.md  build_python_bindings.py  demo.sh  demo_enhanced.sh  demo_quick.sh  python_demo.py  setup.py  vectro-plus-macos-arm64
coverage/: tarpaulin-report.html
docs/: architecture.md
examples/: basic_example.py
generators/: Cargo.toml  README.md
python/tests/: run_tests.py  test_vectro_plus.py
python/vectro_plus/: __init__.py
scripts/: README.md  generate_embeddings.py  generate_themed_embeddings.py
vectro_cli/: Cargo.toml
vectro_cli/src/: lib.rs  main.rs  server.rs
vectro_cli/tests/: integration_cli.rs  integration_server.rs
vectro_lib/: Cargo.toml
vectro_lib/src/: lib.rs
vectro_py/: Cargo.toml
