[package]
name = "vectro_cli"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
vectro_lib = { path = "../vectro_lib" }
anyhow = "1.0"
serde_json = "1.0"
csv = "1.2"
