[package]
name = "vectro_cli"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
vectro_lib = { path = "../vectro_lib" }
anyhow = "1.0"
serde_json = "1.0"
csv = "1.2"
indicatif = "0.17"
bincode = "1.3"
crossbeam-channel = "0.5"
num_cpus = "1.17"
chrono = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"

[dev-dependencies]
tempfile = "3.6"
