[package]
name = "vectro_lib"
version = "1.1.0"
authors = ["Wesley Scholl <128409641+wesleyscholl@users.noreply.github.com>"]
edition = "2021"

[dependencies]
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.8"
nalgebra = "0.32"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.6"
criterion = { version = "0.5", features = ["async"] }
